--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -18,9 +19,11 @@ section {
     display: flex;
 }
 
-.half-width {7
-    width: 50%;
-    padding-left: 5%;
+.half-width {
+    width: 140%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
 }
 
 .half-width img {
@@ -34,4 +37,10 @@ section {
     padding: 10px 40px;
     border-radius: 5px;
     font-weight: 700;   
+}
+
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+
 }
