--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h2 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 150px;
 }
@@ -54,4 +54,24 @@ section {
 
 .right-space {
     padding-right: 50px;
+}
+
+.orange-color {
+    color: orange;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-right: 20p;
+    box-shadow: gray 10px 10px 50px;
+    border-radius: 10px;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
 }
