--- a/style.css
+++ b/style.css
@@ -33,11 +33,22 @@ h2 {
 
 .link-button {
     text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
+    background-image: linear-gradient(180deg,#4672EE 0,#214EEC 100%);
+    box-shadow: 0 1px 0 #1438b5, 0 6px 12px rgb(9 30 66 / 60%);
     color: white;
     padding: 10px 40px;
     border-radius: 5px;
     font-weight: 700;   
+}
+
+.link-button:hover {
+    background-image: linear-gradient(orange, tomato);
+    box-shadow: 0 1px 0 #1438b5, 0 2px 4px rgb(9 30 66 / 20%);
+    transition: .2s ease-in-out;
+}
+
+.button-top {
+    margin-bottom: 30px;
 }
 
 .top-banner {
@@ -66,7 +77,7 @@ h2 {
     margin-right: 5%;
     padding-left: 20px;
     padding-right: 20p;
-    box-shadow: gray 10px 10px 50px;
+    box-shadow: 0 1px 0 #474747, 10px 20px 50px rgb(9 30 66 / 90%);
     border-radius: 10px;
 }
 
@@ -80,12 +91,14 @@ h2 {
     border-left: 7px solid;
     border-image: linear-gradient( blue , cyan );
     border-image-slice: 1;
+    background: linear-gradient(156.47deg,rgba(255,227,231,.5) -15.49%,#B8E7EA 108.24%),#FFF;
 }
 
 #web-dev-experience {
     border-left: 7px solid;
     border-image: linear-gradient( purple , tomato );
     border-image-slice: 1;
+    background: linear-gradient(156.47deg,rgba(254,70,70,.17) -15.49%,rgba(182,244,80,.15) 108.24%),#FFF;
 }
 
 footer {
